# ytmusic-rs

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  Cargo.toml  README.md
src/: json.rs  main.rs  threading.rs  ui.rs  ytm_utils.rs
src/guis/: home.rs  library_playlists.rs  mod.rs
ytmusic-api/: Cargo.toml
ytmusic-api/src/: json.rs  lib.rs  tests.rs  ytm_utils.rs
ytmusic-gui/: Cargo.toml
ytmusic-gui/src/guis/: library_playlists.rs
