[package]
edition = "2021"
name = "ytmusic-rs"
version = "0.1.0"

[dependencies]
gtk = "0.15.4"
reqwest = { version = "0.11.10", features = ["gzip"] }
tokio = { version = "1", features = ["full"] }
sha1 = "0.10.0"
hex = "0.4.3"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"