[package]
edition = "2021"
name = "ytmusic-api"
version = "0.1.0"

[dependencies]
reqwest = { version = "0.11.10", features = ["gzip"] }
sha1 = "0.10.0"
hex = "0.4.3"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
async-trait = "0.1.53"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dirs = "1.0.4"