[package]
name = "ytmusic-gui"
version = "0.1.0"
edition = "2021"
authors = ["Tyman"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["tokio"] }
reqwest = { version = "0.11.10", features = ["gzip"] }
ytmusic-api = { path = "../ytmusic-api" }
tempfile = "3.3.0"